--- a/wp-content/themes/synergy-dev/assets/scss/config/_layers.scss
+++ b/wp-content/themes/synergy-dev/assets/scss/config/_layers.scss
@@ -16,9 +16,11 @@ Layers
  */
 
 
- $l-site: main, feature, nav, curtain, header, loader;
+ $l-site: main, feature, nav, curtain, header, footer, loader;
 
- $l-header: wrapper, header-inner, toggle, locations;
+ $l-header: wrapper, header-inner, footer, toggle, locations;
+
+ $l-footer: graphic, social, newsletter;
 
  $l-feature: image, overlay, cta;
 
